# web_server

./: Cargo.toml  README.md
.deploy/docker/: Dockerfile  Dockerfile-local  docker-entrypoint-local.sh  docker-entrypoint.sh
src/: main.rs
src/config/: app_config.rs
